--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,15 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+        </dependency>
 
     </dependencies>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.15</java.version>
     </properties>
 
 
